--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -10,7 +10,10 @@
   "dependencies": {
     "next": "12.0.10",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-lottie": "^1.2.3",
+    "react-typed": "^1.2.0",
+    "styled-components": "^5.3.5"
   },
   "devDependencies": {
     "@types/node": "^17.0.14",
