--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -11,6 +11,7 @@
     "next": "12.0.10",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-icons": "^4.3.1",
     "react-lottie": "^1.2.3",
     "react-typed": "^1.2.0",
     "styled-components": "^5.3.5"
@@ -18,6 +19,7 @@
   "devDependencies": {
     "@types/node": "^17.0.14",
     "@types/react": "^17.0.38",
+    "@types/styled-components": "^5.1.24",
     "eslint": "8.8.0",
     "eslint-config-next": "12.0.10",
     "typescript": "^4.5.5"
