--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -19,9 +19,13 @@
   "devDependencies": {
     "@types/node": "^17.0.14",
     "@types/react": "^17.0.38",
+    "@types/react-dom": "^17.0.14",
     "@types/styled-components": "^5.1.24",
     "eslint": "8.8.0",
     "eslint-config-next": "12.0.10",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react": "^7.29.4",
+    "prettier": "^2.6.2",
     "typescript": "^4.5.5"
   }
 }
