--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -13,14 +13,20 @@
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
     "react-lottie": "^1.2.3",
+    "react-slick": "^0.28.1",
     "react-typed": "^1.2.0",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
     "@types/node": "^17.0.14",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.14",
+    "@types/react-lottie": "^1.2.6",
+    "@types/react-slick": "^0.23.8",
     "@types/styled-components": "^5.1.24",
+    "@typescript-eslint/parser": "^5.18.0",
+    "babel-plugin-styled-components": "^2.0.6",
     "eslint": "8.8.0",
     "eslint-config-next": "12.0.10",
     "eslint-plugin-prettier": "^4.0.0",
