--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "next": "12.0.10",
+    "polished": "^4.2.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
