:sparkles: created ssr styles

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,6 +22,8 @@
   "plugins": ["react", "@typescript-eslint"],
   " rules": {
     "prettier/prettier": "error",
+    "react/prop-types": "off",
+    "space-before-function-paren": "off",
     "react/jsc-filename-extension": [
       "warn",
       { "extensions": [".js", ".jsx", ".ts", ".tsx"] }
