--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
   },
   "dependencies": {
     "next": "12.0.10",
+    "nookies": "^2.5.2",
     "polished": "^4.2.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
     "react-lottie": "^1.2.3",
     "react-slick": "^0.28.1",
+    "react-switch": "^6.0.0",
     "react-typed": "^1.2.0",
     "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.5"
@@ -33,6 +35,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.29.4",
     "prettier": "^2.6.2",
-    "typescript": "^4.5.5"
+    "typescript": "^4.5.5",
+    "typescript-plugin-styled-components": "^2.0.0"
   }
 }
