--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,8 +13,23 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "jsx": "preserve"
+    "jsx": "preserve",
+    "plugins": [
+      {
+        "transform": "typescript-plugin-styled-components",
+        "type": "config",
+        "ssr": true,
+        "minify": true
+      }
+    ]
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
-  "exclude": ["node_modules"]
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    "env-config.js",
+    "styled.d.ts"
+  ],
+  "exclude": ["node_modules"],
+  "files": ["src/styles/theme/styled.d.ts"]
 }
