--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
     "react-lottie": "^1.2.3",
+    "react-modal": "^3.14.4",
     "react-slick": "^0.28.1",
     "react-switch": "^6.0.0",
     "react-typed": "^1.2.0",
@@ -26,6 +27,7 @@
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.14",
     "@types/react-lottie": "^1.2.6",
+    "@types/react-modal": "^3.13.1",
     "@types/react-slick": "^0.23.8",
     "@types/styled-components": "^5.1.24",
     "@typescript-eslint/parser": "^5.18.0",
