:books: updt docs

--- a/.eslintrc
+++ b/.eslintrc
@@ -3,13 +3,15 @@
     "next/core-web-vitals",
     "eslint:recommended",
     "plugin:react/recommended",
+    "plugin:react-hooks/recommended",
+    "plugin:react/jsx-runtime",
     "plugin:@typescript-eslint/recommended",
     "prettier",
     "prettier/react"
   ],
   "env": {
     "browser": true,
-    "es2020": true
+    "es2021": true
   },
   "parser": "@typescript-eslint/parser/babel-eslint",
   "parserOptions": {
@@ -34,5 +36,10 @@
     "linebreak-style": ["error", "windows"],
     "quotes": ["error", "double"],
     " semi": ["error", "never"]
+  },
+  "settings": {
+    "react": {
+      "version": "detect"
+    }
   }
 }
