--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,16 @@
 {
   "compilerOptions": {
     "target": "esNext",
-    "lib": ["dom", "dom.iterable", "esnext"],
-    "allowJs": true,
+    "lib": [
+      "dom",
+      "dom.iterable",
+      "esnext"
+    ],
+    "allowJs": false,
     "skipLibCheck": true,
     "strict": true,
     "forceConsistentCasingInFileNames": true,
+    "allowSyntheticDefaultImports": true,
     "noEmit": true,
     "incremental": true,
     "esModuleInterop": true,
@@ -14,6 +19,7 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
+    "baseUrl": "src",
     "plugins": [
       {
         "transform": "typescript-plugin-styled-components",
@@ -27,9 +33,16 @@
     "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx",
+    "**/*.spec.tsx",
+    "./src/styles/theme/renderTheme.ts",
+    "./src/.jest/setupTests.ts",
     "env-config.js",
     "styled.d.ts"
   ],
-  "exclude": ["node_modules"],
-  "files": ["src/styles/theme/styled.d.ts"]
+  "exclude": [
+    "node_modules"
+  ],
+  "files": [
+    "src/@types/styled.d.ts"
+  ]
 }
