--- a/package.json
+++ b/package.json
@@ -1,11 +1,18 @@
 {
   "name": "portfolio",
   "private": true,
+  "version": "1.1.0",
+  " engines": {
+    "node": ">=16.15.1",
+    "yarn": ">=1.22.15"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "prepare": "husky install",
+    "test": "jest"
   },
   "dependencies": {
     "next": "12.0.10",
@@ -24,6 +31,9 @@
     "uuidv4": "^6.2.13"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@types/jest": "^29.1.1",
     "@types/node": "^17.0.14",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.14",
@@ -34,9 +44,15 @@
     "@typescript-eslint/parser": "^5.18.0",
     "eslint": "8.8.0",
     "eslint-config-next": "12.0.10",
+    "eslint-plugin-jest": "^27.1.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.29.4",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "husk": "^0.5.3",
+    "jest": "^29.1.2",
     "prettier": "^2.6.2",
+    "semantic-release": "^19.0.5",
+    "ts-jest": "^29.0.3",
     "typescript": "^4.5.5",
     "typescript-plugin-styled-components": "^2.0.0"
   }
