--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "vercel": "^28.4.6"
   },
   "devDependencies": {
+    "@next/eslint-plugin-next": "^12.3.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@types/jest": "^29.1.1",
@@ -41,10 +42,14 @@
     "@types/react-modal": "^3.13.1",
     "@types/react-slick": "^0.23.8",
     "@types/styled-components": "^5.1.24",
+    "@typescript-eslint/eslint-plugin": "^5.39.0",
     "@typescript-eslint/parser": "^5.18.0",
-    "eslint": "8.8.0",
-    "eslint-config-next": "12.0.10",
-    "eslint-plugin-jest": "^27.1.0",
+    "eslint": "^8.15.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-friendly-formatter": "^4.0.1",
+    "eslint-import-resolver-typescript": "^3.2.7",
+    "eslint-plugin-jest": "^26.6.0",
+    "eslint-plugin-jsx-a11y": "^6.6.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.29.4",
     "eslint-plugin-react-hooks": "^4.6.0",
