--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "lottie-react": "^2.3.1",
     "next": "12.2.4",
     "nookies": "^2.5.2",
+    "phosphor-react": "^1.4.1",
     "polished": "^4.2.2",
     "react": "18.0.0",
     "react-dom": "18.0.0",
