--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "test": "jest"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.0.0",
+    "@radix-ui/react-tabs": "^1.0.0",
+    "keen-slider": "^6.8.2",
     "lottie-react": "^2.3.1",
     "next": "12.2.4",
     "nookies": "^2.5.2",
