--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "lottie-react": "^2.3.1",
     "next": "12.2.4",
     "nookies": "^2.5.2",
-    "phosphor-react": "^1.4.1",
     "polished": "^4.2.2",
     "react": "18.0.0",
     "react-dom": "18.0.0",
@@ -35,6 +34,7 @@
     "vercel": "^19.1.2"
   },
   "devDependencies": {
+    "@iconify-icon/react": "^1.0.1",
     "@next/eslint-plugin-next": "^12.3.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
