--- a/.github/workflows/production.yaml
+++ b/.github/workflows/production.yaml
@@ -11,12 +11,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: actions/setup-node@3
+      - uses: actions/setup-node@v1
         with:
-          node-version: 16
+          node-version: '16.x'
           cache: npm
       - name: Install
-        run: npm install --legacy-peer-deps
+        run: npm install
       - name: Pull Vercel Environment Information
         run: vercel pull --yes --environment=production --token=${{ secrets.VERCEL_TOKEN }}
       - name: Build Project Artifacts
