--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "husk": "^0.5.3",
     "jest": "^29.1.2",
     "jest-environment-jsdom": "^29.1.2",
+    "jest-styled-components": "^7.1.1",
     "prettier": "^2.6.2",
     "semantic-release": "^19.0.5",
     "ts-jest": "^29.0.3",
