--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -20,4 +20,6 @@ jobs:
         run: |
           npm install
       - name: Release
+        env:
+          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
         run: npx semantic-release
