--- a/package.json
+++ b/package.json
@@ -25,10 +25,7 @@
     "polished": "^4.2.2",
     "react": "18.0.0",
     "react-dom": "18.0.0",
-    "react-icons": "^4.3.1",
-    "react-modal": "^3.14.4",
     "react-slick": "^0.29.0",
-    "react-switch": "^6.0.0",
     "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.5",
     "typed.js": "^2.0.12",
@@ -46,8 +43,6 @@
     "@types/node": "^17.0.14",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.14",
-    "@types/react-lottie": "^1.2.6",
-    "@types/react-modal": "^3.13.1",
     "@types/react-slick": "^0.23.8",
     "@types/styled-components": "^5.1.24",
     "@typescript-eslint/eslint-plugin": "^5.39.0",
@@ -65,6 +60,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "husk": "^0.5.3",
     "jest": "^29.2.0",
+    "jest-canvas-mock": "^2.4.0",
     "jest-environment-jsdom": "^29.2.0",
     "jest-styled-components": "^7.1.1",
     "prettier": "^2.6.2",
