ci: added setup sentry

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@radix-ui/react-dialog": "^1.0.0",
     "@radix-ui/react-tabs": "^1.0.0",
+    "@sentry/nextjs": "^7.15.0",
     "keen-slider": "^6.8.2",
     "lottie-react": "^2.3.1",
     "next": "12.2.4",
