--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
   "dependencies": {
     "@radix-ui/react-dialog": "^1.0.0",
     "@radix-ui/react-tabs": "^1.0.0",
-    "@sentry/nextjs": "^7.15.0",
     "keen-slider": "^6.8.2",
     "lottie-react": "^2.3.1",
     "next": "12.2.4",
@@ -26,7 +25,10 @@
     "polished": "^4.2.2",
     "react": "18.0.0",
     "react-dom": "18.0.0",
+    "react-icons": "^4.3.1",
+    "react-modal": "^3.14.4",
     "react-slick": "^0.29.0",
+    "react-switch": "^6.0.0",
     "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.5",
     "typed.js": "^2.0.12",
@@ -44,6 +46,8 @@
     "@types/node": "^17.0.14",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.14",
+    "@types/react-lottie": "^1.2.6",
+    "@types/react-modal": "^3.13.1",
     "@types/react-slick": "^0.23.8",
     "@types/styled-components": "^5.1.24",
     "@typescript-eslint/eslint-plugin": "^5.39.0",
@@ -60,9 +64,8 @@
     "eslint-plugin-react": "^7.29.4",
     "eslint-plugin-react-hooks": "^4.6.0",
     "husk": "^0.5.3",
-    "jest": "^29.2.0",
-    "jest-canvas-mock": "^2.4.0",
-    "jest-environment-jsdom": "^29.2.0",
+    "jest": "^29.1.2",
+    "jest-environment-jsdom": "^29.1.2",
     "jest-styled-components": "^7.1.1",
     "prettier": "^2.6.2",
     "semantic-release": "^19.0.5",
