--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
   "dependencies": {
     "@radix-ui/react-dialog": "^1.0.0",
     "@radix-ui/react-tabs": "^1.0.0",
-    "@sentry/nextjs": "^7.15.0",
     "keen-slider": "^6.8.2",
     "lottie-react": "^2.3.1",
     "next": "12.2.4",
@@ -27,6 +26,7 @@
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-slick": "^0.29.0",
+    "sharp": "^0.31.1",
     "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.5",
     "typed.js": "^2.0.12",
@@ -59,7 +59,6 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.29.4",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "husk": "^0.5.3",
     "jest": "^29.2.0",
     "jest-canvas-mock": "^2.4.0",
     "jest-environment-jsdom": "^29.2.0",
