--- a/package.json
+++ b/package.json
@@ -11,9 +11,23 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "lint:css": "stylelint --fix './src/**/*.ts'",
     "test": "jest",
     "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage"
+    "test:coverage": "jest --coverage",
+    "prepare": "husky install"
+  },
+  "lint-staged": {
+    "*.{ts,tsx}": [
+      "npm run lint --fix",
+      "npm run test --findRelatedTests --bail"
+    ],
+    "*.{json,md}": [
+      "prettier --write"
+    ],
+    "*.{ts}": [
+      "npm run lint:css --fix"
+    ]
   },
   "dependencies": {
     "@radix-ui/react-dialog": "^1.0.0",
@@ -63,12 +77,17 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.29.4",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "husky": "^8.0.1",
     "jest": "^29.2.0",
     "jest-canvas-mock": "^2.4.0",
     "jest-environment-jsdom": "^29.2.0",
     "jest-styled-components": "^7.1.1",
+    "lint-staged": "^13.0.3",
     "prettier": "^2.6.2",
     "semantic-release": "^19.0.5",
+    "stylelint-config-recommended": "^9.0.0",
+    "stylelint-config-styled-components": "^0.1.1",
+    "stylelint-processor-styled-components": "^1.10.0",
     "ts-jest": "^29.0.3",
     "typescript": "^4.5.5",
     "typescript-plugin-styled-components": "^2.0.0"
