--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "lint-staged": "^13.0.3",
     "prettier": "^2.6.2",
     "semantic-release": "^19.0.5",
+    "stylelint": "^14.14.0",
     "stylelint-config-recommended": "^9.0.0",
     "stylelint-config-styled-components": "^0.1.1",
     "stylelint-processor-styled-components": "^1.10.0",
