refactor: :recycle: slider about section and update tests

--- a/package.json
+++ b/package.json
@@ -39,11 +39,7 @@
     "polished": "^4.2.2",
     "react": "18.0.0",
     "react-dom": "18.0.0",
-    "react-icons": "^4.3.1",
-    "react-modal": "^3.14.4",
-    "react-slick": "^0.29.0",
     "sharp": "^0.31.1",
-    "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.5",
     "typed.js": "^2.0.12",
     "uuidv4": "^6.2.13",
@@ -83,6 +79,7 @@
     "jest-environment-jsdom": "^29.2.0",
     "jest-styled-components": "^7.1.1",
     "lint-staged": "^13.0.3",
+    "next-router-mock": "^0.7.4",
     "prettier": "^2.6.2",
     "semantic-release": "^19.0.5",
     "stylelint": "^14.14.0",
