--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "private": true,
   "version": "1.1.0",
   " engines": {
-    "node": ">=16.15.1",
-    "yarn": ">=1.22.15"
+    "node": "16.15.1",
+    "npm": "8.11"
   },
   "scripts": {
     "dev": "next dev",
