--- a/.github/workflows/coverage.yaml
+++ b/.github/workflows/coverage.yaml
@@ -2,7 +2,7 @@
 
 name: Jest Coverage Report
 on:
-  pull_request:
+  push:
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -14,7 +14,7 @@ jobs:
 
       - name: Run tests
         run: |
-          npx jest --coverage --coverageReporters json-summary
+          npx jest --coverage --coverageReporters json-summary --silent
 
       - name: Jest Coverage Comment
         uses: MishaKav/jest-coverage-comment@main
@@ -25,4 +25,3 @@ jobs:
           hide-comment: false
           create-new-comment: true
           hide-summary: false
-          coverage-path: ./coverage.txt
