--- a/.github/workflows/preview.yaml
+++ b/.github/workflows/preview.yaml
@@ -13,6 +13,8 @@ jobs:
       - uses: actions/checkout@v2
       - name: Install Vercel CLI
         run: npm install
+      - name: Run tests
+        run: npm run test
       - name: Pull Vercel Environment Information
         run: vercel pull --yes --environment=preview --token=${{ secrets.VERCEL_TOKEN }}
       - name: Build Project Artifacts
