Update dependabot strategy

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -9,6 +9,9 @@ updates:
     directory: "/" # Location of package manifests
     schedule:
       interval: "weekly"
+    allow:
+      - dependency-type: "production"
+      
     ignore:
       - dependency-name: '*'
         update-types: ['version-update:semver-patch']
