--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "private": true,
   "version": "1.2.1",
   " engines": {
-    "node": ">=18",
-    "npm": "8.19.3"
+    "node": ">=18.16",
+    "npm": "9.5.1"
   },
   "scripts": {
     "dev": "next dev",
@@ -14,7 +14,8 @@
     "test": "jest --ci --forceExit --detectOpenHandles --silent",
     "test:watch": "jest --watchAll",
     "test:coverage": "jest --coverage",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "slicemachine": "start-slicemachine"
   },
   "lint-staged": {
     "*.{ts,tsx}": [
@@ -35,10 +36,9 @@
     "next-seo": "^6.0.0",
     "nookies": "^2.5.2",
     "polished": "^4.2.2",
-    "react": "18.0.0",
-    "react-dom": "18.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "rollbar": "^2.26.1",
-    "sharp": "^0.31.1",
     "styled-components": "^5.3.5",
     "typed.js": "^2.0.12",
     "uuidv4": "^6.2.13"
@@ -51,9 +51,9 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
     "@types/jest": "^29.1.1",
-    "@types/node": "^17.0.14",
-    "@types/react": "^17.0.38",
-    "@types/react-dom": "^17.0.14",
+    "@types/node": "^20.3.1",
+    "@types/react": "^18.2.14",
+    "@types/react-dom": "^18.2.6",
     "@types/react-lottie": "^1.2.6",
     "@types/react-modal": "^3.13.1",
     "@types/react-slick": "^0.23.8",
