--- a/.github/workflows/coverage.yaml
+++ b/.github/workflows/coverage.yaml
@@ -1,7 +1,7 @@
 # This workflow will install dependencies, create coverage tests and run Jest Coverage Comment
 
 name: Jest Coverage Report
-on: [pull_request, push]
+on: [pull_request]
 
 jobs:
   coverage:
